--- a/package.json
+++ b/package.json
@@ -64,11 +64,15 @@
     }
   },
   "dependencies": {
+    "better-sqlite3": "^5.4.3",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
     "@electron-forge/cli": "6.0.0-beta.45",
     "@electron-forge/maker-deb": "6.0.0-beta.45",
     "@electron-forge/maker-rpm": "6.0.0-beta.45",
@@ -76,6 +80,7 @@
     "@electron-forge/maker-zip": "6.0.0-beta.45",
     "@electron-forge/plugin-webpack": "6.0.0-beta.45",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "electron": "6.0.11",
     "node-loader": "^0.6.0",
