--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "better-sqlite3": "5.4.3",
     "electron-squirrel-startup": "^1.0.0",
+    "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "sqlite3": "^4.1.0"
